syntax = "proto3";
import "google/protobuf/any.proto";
package ms_customer;

service CustomerService{
  rpc customerRegistration(CustomerDto) returns (ResponseDto) {}
  rpc authenticateUser(AuthenticateDto) returns (ResponseDto) {}
  rpc validateOTP(OtpValidationDto) returns (OtpResponseDto) {}
  rpc getCustomer(customerFilters) returns (CustomerResponseDto) {}
  rpc findOne(customerFindFilters) returns (CustomerFindResponseDto) {}
  rpc checkAuthorization(checkAuthorizationDto) returns (checkAuthorizationResponseDto) {}
}

message checkAuthorizationDto {
  string token = 1;
}

message checkAuthorizationResponseDto {
  bool isAuthorized = 1;
  optional int32 id = 2;
  optional string message = 3;
}

message customerFindFilters{
  optional int32 id = 1;
  optional string phone_number = 2;
  optional string id_number = 3;
  optional string email = 4;
}

message customerFilters{
  optional int32 id = 1;
  optional string first_name = 2;
  optional string last_name = 3;
}

message CustomerResponseDto{
  int32 status = 1;
  string message = 2;
  repeated CustomerDto data = 3;
}


message CustomerFindResponseDto{
  int32 status = 1;
  string message = 2;
  optional CustomerFindDto data = 3;
}

message CustomerFindDto{
  string first_name = 1;
  string last_name = 2;
  string email = 3;
  string phone_number = 4;
  IdType id_type= 5;
  string id_number=6;
  GenderType gender = 7;
}

message OtpValidationDto{
  string otp = 1;
  string phone_number = 2;
}

message OtpResponseDto{
  int32 status = 1;
  string message = 2;
  optional string token = 3;
  optional otpValidationRes data = 4;
}

message otpValidationRes{
  int32 id = 1;
  string last_name = 2;
  string first_name = 3;
  string email = 4 ;
  string phone_number = 5;
  IdType id_type= 6;
  string id_number=7;
  GenderType gender = 8;
}


enum IdType {
  NID = 0;
  PASSPORT = 1;
};

enum GenderType{
  FEMALe = 0;
  MALE = 1;
};

message CustomerDto{
  string first_name = 1;
  string last_name = 2;
  string email = 3;
  string phone_number = 4;
  IdType id_type= 5;
  string id_number=6;
  string password = 7;
  GenderType gender = 8;
}

message ResponseDto{
  int32 status = 1;
  string message = 2;
  optional google.protobuf.Any data = 3;
}

message AuthenticateDto{
  string email = 1;
  string password = 2;
}